2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* lo-mappers.h (xmin (double, double), xmax (double, double),
	xmin (float, float), xmax (float, float)): Inline definitions.
	* lo-mappers.cc (xmin (double, double), xmax (double, double),
	xmin (float, float), xmax (float, float)): Remove from here.
	* mx-inlines.cc (mx_inline_xmin, mx_inline_xmax): Provide
	specializations for real array-scalar and scalar-array cases.

2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* oct-norm.cc (norm_accumulator_p::accum, norm_accumulator_mp::accum):
	Call octave_quit here.
	(higham_subp): Also here.

2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* mx-op-defs.h (SND_MINMAX_FCN, NDS_MINMAX_FCN, NDND_MINMAX_FCN):
	Simplify using mx_inlines machinery. 
	* dNDArray (min, max): Simplify.
	* fNDArray (min, max): Simplify.
	* CNDArray (min, max): Simplify.
	* fCNDArray (min, max): Simplify.

2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h: Substitute OCTAVE_QUIT -> octave_quit ().
	* CMatrix.cc: Ditto.
	* CNDArray.cc: Ditto.
	* CSparse.cc: Ditto.
	* CmplxGEPBAL.cc: Ditto.
	* MArrayN.cc: Ditto.
	* MSparse.cc: Ditto.
	* Sparse-diag-op-defs.h: Ditto.
	* Sparse-op-defs.h: Ditto.
	* Sparse-perm-op-defs.h: Ditto.
	* Sparse.cc: Ditto.
	* Sparse.h: Ditto.
	* SparseCmplxQR.cc: Ditto.
	* SparseQR.cc: Ditto.
	* boolSparse.cc: Ditto.
	* bsxfun-defs.cc: Ditto.
	* dMatrix.cc: Ditto.
	* dNDArray.cc: Ditto.
	* dSparse.cc: Ditto.
	* dbleGEPBAL.cc: Ditto.
	* fCMatrix.cc: Ditto.
	* fCNDArray.cc: Ditto.
	* fCmplxGEPBAL.cc: Ditto.
	* fMatrix.cc: Ditto.
	* fNDArray.cc: Ditto.
	* file-ops.cc: Ditto.
	* floatGEPBAL.cc: Ditto.
	* lo-utils.cc: Ditto.
	* mx-op-defs.h: Ditto.
	* oct-fftw.cc: Ditto.
	* oct-norm.cc: Ditto.
	* oct-rand.cc: Ditto.
	* sparse-dmsolve.cc: Ditto.

2010-01-20  Jaroslav Hajek  <highegg@gmail.com>

	* bsxfun-defs.cc (BSXFUN_STDOP_DEFS_MXLOOP): Fix reversed min/max
	defs.

2010-01-20  John W. Eaton  <jwe@octave.org>

	* glob-match.h: Update copyright.
